2008-06-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
    (drawItem): Call addEntity() method.

----------  JFREECHART 1.0.10 RELEASED ------------------------

2008-06-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/DateTickUnit.java
    (addToDate(Date)): Deprecated.

2008-06-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Millisecond.java
    (compareTo): Added handling for general RegularTimePeriod.

2008-06-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/Axis.java
    (setTickLabelInsets(RectangleInsets)): Delegate to new method,
    (setTickLabelInsets(RectangleInsets, boolean)): New method.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/SimpleTimePeriod.java
    (start): Changed from Date to long,
    (end): Likewise,
    (getStartMillis): New method,
    (getEndMillis): Likewise,
    (getStart): Returns new date instance,
    (getEnd): Likewise.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/StackedXYAreaRenderer2.java
    (drawItem): Handle PlotOrientation.HORIZONTAL.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/SpiderWebPlot.java
    (getLegendItems): Return early if dataset is null.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/SpiderWebPlot.java
    (drawRadarPoly): Check dataExtractOrder when generating chart entities.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    Patches by Henry Proudhon:
    * swt/org/jfree/experimental/chart/swt/ChartComposite.java
    (ChartComposite): Removed duplicate listener registration,
    (paintControl): Switched horizontalAxisTrace and verticalAxisTrace,
    (dispose): New method,