@@ -1,7 +1,9 @@
 2008-06-16  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
-    (drawItem): Call addEntity() method.
+    (drawItem): Call addEntity() method,
+    * source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
+    (drawItem): Likewise.
 
 ----------  JFREECHART 1.0.10 RELEASED ------------------------
 
